--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Equipe Alura Start</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    </head>
+    
 
 <body>
     <header class="cabecalho">
@@ -26,9 +32,32 @@
             <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro">
+        <img class="escola-imagem" src="fotoprof.png" alt="Professora no quadro">
     </section>
     
 </body>
+<section class="estudante">
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="FOTO-ALE_EQUIPE.png" alt="foto do marcelo">
+        <h3 class="estudante-nome">alessandro</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="jose.png" alt="foto do marcelo">
+        <h3 class="estudante-nome">jose</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    </div>
+</section>
+</body>
 
 </html>
+<a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"  alt="icone github"></a>
+
+<a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+
+<a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
