--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
         <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
         <img class="estudante-icone" src="instagram.png" alt="icone instagram">
     </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="vvvghvhv.png" alt="foto do marcelo">
+        <h3 class="estudante-nome">pedro</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="lauro.jpg" alt="foto do marcelo">
+        <h3 class="estudante-nome">laura</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    </div>
 </section>
 </body>
 
